--- a/src/index.scss
+++ b/src/index.scss
@@ -16,4 +16,7 @@
      border: 0.7px solid #eee;
      box-shadow: 0 4px 10px -1px rgba(0, 0, 0, 0.1), 0 2px 6px -2px rgba(0, 0, 0, 0.2);
   }
+  .scale-98{
+    transform: scale(0.99);
+  }
 }
